Keep the palette list in the color picker sorted

BUG:415438